# buzzit

./: .gitignore  ADULT_FILTER.md  MBTI_FEATURE.md  README.md  buzzit_posts.json  crawler_cli.py  docker-compose.yml  pyproject.toml  requirements.txt  run-fe.sh  run.sh
.github/workflows/: crawl.yml
backend/: main.py  requirements.txt  test_damoang.py
backend/core/: extractor.py
backend/core/crawler/: analyze_new_sites.py  debug_fmkorea.py  debug_html.py  debug_single.py  main.py  test_new_sites.py
backend/core/skin_match/: __init__.py  analyzer.py  celeb_data.py  detector.py  extractor.py  matcher.py
docs/: KAKAO_KEY_GUIDE.md  SKIN_MATCH_TASKS.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/functions/: _middleware.ts
frontend/public/: robots.txt  sitemap.xml
frontend/scripts/: generate-og-images.html  generate_mbti_images.py
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LanguageSelector.tsx  Layout.tsx  PostCard.tsx
frontend/src/contexts/: LocaleContext.tsx
frontend/src/data/: questions.ts  results.ts  skinMatchResults.ts
frontend/src/hooks/: usePostTranslation.ts  useTranslation.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: AboutPage.tsx  HomePage.tsx  MBTIResultPage.tsx  MBTIStartPage.tsx  MBTITestPage.tsx  PostDetailPage.tsx  PrivacyPage.tsx  SitePage.tsx  SkinMatchResult.tsx  SkinMatchTest.tsx  TermsPage.tsx
frontend/src/types/: index.ts  mbti.ts  skinMatch.ts
frontend/src/utils/: api.ts  imageProcessor.ts  kakao.ts  mbtiCalculator.ts  (+6 more)
(+9 files in other folders)
