[project]
name = "buzzit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.104.1",
    "httpx>=0.28.1",
    "lxml>=6.0.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.1.0",
    "pydantic>=2.5.0",
    "trafilatura>=1.6.0",
    "curl-cffi>=0.14.0",
]
